# fstree

./: Cargo.toml  README.md
src/: cli.rs  config.rs  filter.rs  formatter.rs  ignore.rs  main.rs  stats.rs  tree.rs
src/helpers/: ansi.rs  bytes.rs  mod.rs
