[package]
name = "fstree"
version = "0.1.0"
edition = "2024"
authors = ["Shresht7"]
description = "list contents of a directory in a tree format"
keywords = ["cli", "tool", "filesystem"]
categories = ["command-line-utilities"]
license = "MIT"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
globset = "0.4.16"
ignore = "0.4.23"
